# cyber-chat

design/: call.html  index.html  main.html
design/styles/: styles.css
doc/: design.md  task.md
docker/: docker-compose.yml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: signals.ts
frontend/src/components/: CamVideo.css  CamVideo.tsx  CamVideoPlayer.tsx  CyberChat.tsx  LocalMedia.tsx  PeerConnStatusBar.tsx  Player.tsx  SignalServerStatusBar.tsx  SiteHeader.css  SiteHeader.tsx  VideoChat.css  VideoChat.tsx  useUserMedia.ts
frontend/src/core/: useLocalMedia.tsx
frontend/src/network/: useWebSocket.ts  websocket.ts
frontend/src/utils/: Res.ts  func.ts
frontend/src/webrtc/: SignalServer.tsx  WebRtcConn.tsx  signals.ts  (+5 more)
scripts/: build-frontend.sh  build.sh  build_backend.sh
server/: Cargo.toml  requset.http
server/db/migrations/: 20220515_users_table.sql  20220517_room_table.sql
server/requests/: request.http  requset.http
server/src/: main.rs  webrtc.rs  websocket.rs
server/src/application/: active_room.rs  db_common.rs  login.rs  mod.rs  pg_common.rs  room_store.rs  signal_server.rs  user_store.rs
server/src/application/security/: context.rs  jwt.rs  mod.rs
server/src/domain/: mod.rs  room.rs  user.rs  workstation.rs
server/src/infra/: config.rs  mod.rs  pg.rs
server/src/infra/routes/: auth.rs  login.rs  mod.rs  rooms.rs  ui.rs  users.rs  webrtc.rs
server/src/webrtc/: api.rs  core.rs  mod.rs
server/static/: call.html  index.html  styles.css
(+44 files in other folders)
