[package]
name = "cyber_chat"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "websocket-chat-server"
path = "src/main.rs"

[dependencies]
actix = "0.13"
actix-files = "0.6"
actix-web = "4"
actix-web-actors = "4.1"

jwt = "^0.16"
hmac = "^0.12"
sha2 = "^0.10"

env_logger = "0.9"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

uuid = { version = "1.0.0", features = ["v4", "fast-rng", "macro-diagnostics"]}